--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
+    "mongodb": "^4.1.4",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
