--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "sass": "^1.43.4",
     "typescript": "^4.4.4"
