--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.6.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "mongodb": "^4.1.4",
     "next": "12.0.3",
